unpackaged/main/default/objects/Recomm__c/Recomm__c.object-meta.xml
<CustomObject>
    <label>RecommendationObj</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Recomm Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RecommendationObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>