unpackaged/main/default/objects/Recomm__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RecommendationObjs</relationshipLabel>
    <relationshipName>RecommendationObjs</relationshipName>
    <type>Lookup</type>
</CustomField>