unpackaged/main/default/objects/Recomm__c/fields/Crmit_Url__c.field-meta.xml
<CustomField>
    <fullName>Crmit_Url__c</fullName>
    <label>Crmit Url</label>
    <type>Url</type>
</CustomField>