unpackaged/main/default/objects/Recomm__c/fields/Current_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Current_Challenges__c</fullName>
    <label>Current Challenges/Hurdles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>