unpackaged/main/default/objects/Recomm__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Response</label>
    <referenceTo>Response__c</referenceTo>
    <relationshipLabel>RecommendationObjs</relationshipLabel>
    <relationshipName>RecommendationObjs</relationshipName>
    <type>Lookup</type>
</CustomField>